# enterprise-ai-lifecycle

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
agents/: __init__.py  audit.py  backend.py  base.py  business_analyst.py  contract_registry.py  database.py  deploy.py  frontend.py  guardrail.py  manager.py  message_bus.py  model_wrapper.py  orchestrator.py  qa.py  qa_harness.py  scrum_master.py  security.py  seo.py  token_budget.py
api/: events.py  main.py  websocket.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
graph/: checkpoints.py  safe_graph.py  workflow.py
memory/: session_store.py  vector_store.py
state/: project_state.py  transitions.py
tests/: test_integration.py  test_json_fix.py  test_state.py
tools/: connector.py  mcp_client.py
